// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar matches snapshot (near budget, 80%+) 1`] = `
<View>
  <View
    style={
      {
        "backgroundColor": "#2C2C2E",
        "borderRadius": 5,
        "height": 5,
        "overflow": "hidden",
      }
    }
  >
    <View
      style={
        {
          "backgroundColor": "#FF9F0A",
          "borderRadius": 5,
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": "84%",
        }
      }
    />
  </View>
</View>
`;

exports[`ProgressBar matches snapshot (over budget) 1`] = `
<View>
  <View
    style={
      {
        "backgroundColor": "#2C2C2E",
        "borderRadius": 5,
        "height": 5,
        "overflow": "hidden",
      }
    }
  >
    <View
      style={
        {
          "backgroundColor": "#FF453A",
          "borderRadius": 5,
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": "100%",
        }
      }
    />
  </View>
</View>
`;

exports[`ProgressBar matches snapshot (showLabel=true) 1`] = `
<View>
  <View
    style={
      {
        "backgroundColor": "#2C2C2E",
        "borderRadius": 5,
        "height": 5,
        "overflow": "hidden",
      }
    }
  >
    <View
      style={
        {
          "backgroundColor": "#00D632",
          "borderRadius": 5,
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": "50%",
        }
      }
    />
  </View>
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginTop": 5,
      }
    }
  >
    <Text
      style={
        {
          "color": "#00D632",
          "fontFamily": "Outfit-SemiBold",
          "fontSize": 11,
        }
      }
    >
      $
      150
       spent
    </Text>
    <Text
      style={
        {
          "color": "#636366",
          "fontSize": 11,
        }
      }
    >
      $
      300
       limit
    </Text>
  </View>
</View>
`;

exports[`ProgressBar matches snapshot (under budget) 1`] = `
<View>
  <View
    style={
      {
        "backgroundColor": "#2C2C2E",
        "borderRadius": 5,
        "height": 5,
        "overflow": "hidden",
      }
    }
  >
    <View
      style={
        {
          "backgroundColor": "#00D632",
          "borderRadius": 5,
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": "40%",
        }
      }
    />
  </View>
</View>
`;
